# WestCoastSwing

./: .gitignore  Readme.md  run.sh
backend/: Dockerfile  main.py  pyproject.toml
backend/routers/: coach.py  user.py
backend/utils/: auth0.py  config.py
frontend/: example.env.local  package-lock.json  package.json  tailwind.config.js  testenv.local
frontend/src/: App.js  VideoPlayer.js  index.js  test.js  test.txt
frontend/src/components/authentication/: auth0.js  logout.jsx
frontend/src/components/header/: navbar.js
frontend/src/context/: auth0.js  context.js
frontend/src/pages/coach/: VideoCoachingPlatform.js
frontend/src/pages/user/: Coaches.js  Home.js  Profile.js  Upload.js  Video.js
frontend/src/services/: coach.js  hooks.js  user.js
