[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["industriousrebel <moiz@industriousrebel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
python-multipart = "^0.0.12"
jwt = "^1.3.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
